tests/macro_syntax/fields_with_wrong_attributes_type.stderr
error[E0308]: mismatched types
 --> tests/macro_syntax/fields_with_wrong_attributes_type.rs:7:26
  |
7 |     #[const_init(value = true)]
  |                          ^^^^ expected `usize`, found `bool`
